; ModuleID = '/home/carl/AnghaBench/RetroArch/input/connect/extr_connect_wii.c_hidpad_wii_packet_handler.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/connect/extr_connect_wii.c_hidpad_wii_packet_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connect_wii_wiimote_t = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32*, i32)* @hidpad_wii_packet_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hidpad_wii_packet_handler(i8* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.connect_wii_wiimote_t*, align 8
  %8 = alloca i32*, align 8
  store i8* %0, i8** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = bitcast i8* %9 to %struct.connect_wii_wiimote_t*
  store %struct.connect_wii_wiimote_t* %10, %struct.connect_wii_wiimote_t** %7, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 2
  store i32* %12, i32** %8, align 8
  %13 = load %struct.connect_wii_wiimote_t*, %struct.connect_wii_wiimote_t** %7, align 8
  %14 = icmp ne %struct.connect_wii_wiimote_t* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %3
  br label %53

16:                                               ; preds = %3
  %17 = load i32*, i32** %5, align 8
  %18 = getelementptr inbounds i32, i32* %17, i64 1
  %19 = load i32, i32* %18, align 4
  switch i32 %19, label %53 [
    i32 131, label %20
    i32 128, label %24
    i32 129, label %38
    i32 130, label %45
  ]

20:                                               ; preds = %16
  %21 = load %struct.connect_wii_wiimote_t*, %struct.connect_wii_wiimote_t** %7, align 8
  %22 = load i32*, i32** %8, align 8
  %23 = call i32 @wiimote_pressed_buttons(%struct.connect_wii_wiimote_t* %21, i32* %22)
  br label %53

24:                                               ; preds = %16
  %25 = load %struct.connect_wii_wiimote_t*, %struct.connect_wii_wiimote_t** %7, align 8
  %26 = load i32*, i32** %8, align 8
  %27 = call i32 @wiimote_pressed_buttons(%struct.connect_wii_wiimote_t* %25, i32* %26)
  %28 = load %struct.connect_wii_wiimote_t*, %struct.connect_wii_wiimote_t** %7, align 8
  %29 = load i32*, i32** %8, align 8
  %30 = getelementptr inbounds i32, i32* %29, i64 5
  %31 = load i32*, i32** %8, align 8
  %32 = getelementptr inbounds i32, i32* %31, i64 2
  %33 = load i32, i32* %32, align 4
  %34 = and i32 %33, 240
  %35 = ashr i32 %34, 4
  %36 = add nsw i32 %35, 1
  %37 = call i32 @wiimote_handshake(%struct.connect_wii_wiimote_t* %28, i32 128, i32* %30, i32 %36)
  br label %53

38:                                               ; preds = %16
  %39 = load %struct.connect_wii_wiimote_t*, %struct.connect_wii_wiimote_t** %7, align 8
  %40 = load i32*, i32** %8, align 8
  %41 = call i32 @wiimote_pressed_buttons(%struct.connect_wii_wiimote_t* %39, i32* %40)
  %42 = load %struct.connect_wii_wiimote_t*, %struct.connect_wii_wiimote_t** %7, align 8
  %43 = load i32*, i32** %8, align 8
  %44 = call i32 @wiimote_handshake(%struct.connect_wii_wiimote_t* %42, i32 129, i32* %43, i32 -1)
  br label %53

45:                                               ; preds = %16
  %46 = load %struct.connect_wii_wiimote_t*, %struct.connect_wii_wiimote_t** %7, align 8
  %47 = load i32*, i32** %8, align 8
  %48 = call i32 @wiimote_pressed_buttons(%struct.connect_wii_wiimote_t* %46, i32* %47)
  %49 = load %struct.connect_wii_wiimote_t*, %struct.connect_wii_wiimote_t** %7, align 8
  %50 = load i32*, i32** %8, align 8
  %51 = getelementptr inbounds i32, i32* %50, i64 2
  %52 = call i32 @wiimote_handle_expansion(%struct.connect_wii_wiimote_t* %49, i32* %51)
  br label %53

53:                                               ; preds = %15, %16, %45, %38, %24, %20
  ret void
}

declare dso_local i32 @wiimote_pressed_buttons(%struct.connect_wii_wiimote_t*, i32*) #1

declare dso_local i32 @wiimote_handshake(%struct.connect_wii_wiimote_t*, i32, i32*, i32) #1

declare dso_local i32 @wiimote_handle_expansion(%struct.connect_wii_wiimote_t*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
